Implemented r percentile, improved some of the flow expanded documentation, and bug fixes
