# docs/swagger.json
@@ -441,7 +441,22 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/api.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/store.Result"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
                     },
                     "400": {
                         "description": "Bad Request",
@@ -510,6 +525,9 @@
                 "data": {},
                 "error": {
                     "type": "string"
+                },
+                "status_code": {
+                    "type": "integer"
                 }
             }
         },
@@ -564,6 +582,21 @@
                 }
             }
         },
+        "store.Performance": {
+            "type": "object",
+            "properties": {
+                "correct_answers_count": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "integer"
+                    }
+                },
+                "users_taken_count": {
+                    "type": "integer",
+                    "default": 0
+                }
+            }
+        },
         "store.Question": {
             "type": "object",
             "properties": {
@@ -596,6 +629,9 @@
                 "id": {
                     "type": "integer"
                 },
+                "performance": {
+                    "$ref": "#/definitions/store.Performance"
+                },
                 "questions": {
                     "type": "array",
                     "items": {
@@ -610,6 +646,9 @@
         "store.Result": {
             "type": "object",
             "properties": {
+                "correct_answers_count": {
+                    "type": "integer"
+                },
                 "id": {
                     "type": "integer"
                 },
@@ -619,13 +658,10 @@
                 "quiz_id": {
                     "type": "integer"
                 },
+                "top_percentile": {
+                    "type": "number"
+                },
                 "user_id": {
-                    "type": "integer"
-                },
-                "user_percentile": {
-                    "type": "integer"
-                },
-                "user_score": {
                     "type": "integer"
                 }
             }
